[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-publish-agent"
version = "0.1.0"
description = "Publish markdown to blogging platforms from the command line"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
claude-publish = "claude_publish.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_publish"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "responses"]
